--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-doc": "./node_modules/.bin/jsdoc -r -d './doc' -R './README.md' lib"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
     "mustache": "~0.8.2",
     "extend": "~2.0.0",
     "q": "~1.0.1"
+  },
+  "devDependencies": {
+    "jsdoc": "~3.3.0-alpha10"
   }
 }
